--- a/courses/2016/madison/abundance.Rmd
+++ b/courses/2016/madison/abundance.Rmd
@@ -8,7 +8,7 @@ course:
   location: Madison
   year: 2016
   title: "Hierarchical Models Made Easy &mdash; July 16, 2016 &mdash; Madison, WI &mdash; NACCB Congress"
-  lecture: Abundance models with detection error
+  lecture: Abundance
   file: abundance
   previous: occupancy
   next: lmm
