--- a/courses/2016/madison/occupancy.Rmd
+++ b/courses/2016/madison/occupancy.Rmd
@@ -8,7 +8,7 @@ course:
   location: Madison
   year: 2016
   title: "Hierarchical Models Made Easy &mdash; July 16, 2016 &mdash; Madison, WI &mdash; NACCB Congress"
-  lecture: Occupancy models with detection error
+  lecture: Occupancy
   file: occupancy
   previous: hierarchical-models
   next: abundance
