--- a/courses/2016/madison/index.Rmd
+++ b/courses/2016/madison/index.Rmd
@@ -39,7 +39,7 @@ Morning coffee, and afternoon iced tea and lemonade, plus light snack of chips a
 ### Course resources
 
 * [What to do before the course]({{ site.baseurl }}/courses/2016/madison/how-to-prepare.html)
-* [Introduction]({{ site.baseurl }}/courses/2016/madison/Hierarchical-Models-Made-Easy_Intro.html)
+* [Introduction]({{ site.baseurl }}/courses/2016/madison/Hierarchical-Models-Made-Easy_Intro.html) ([slides]({{ site.baseurl }}/courses/2016/madison/Fundamental_concepts.pdf))
 * [Hierarchical models]({{ site.baseurl }}/courses/2016/madison/hierarchical-models.html):
   - [Occupancy models]({{ site.baseurl }}/courses/2016/madison/occupancy.html)
   - [Abundance models]({{ site.baseurl }}/courses/2016/madison/abundance.html)
