--- a/courses/2016/madison/occupancy.Rmd
+++ b/courses/2016/madison/occupancy.Rmd
@@ -55,7 +55,7 @@ This is a simple situation with two parameters and hence we can plot the likelih
 
 R code for data generation:
 
-```{r}
+```{r,dev='png'}
 set.seed(4321)
 n <- 100
 p <- 0.6
@@ -67,7 +67,7 @@ table(Y = y, W = w)
 
 Given the data, plot the likelihood contours.
 
-```{r}
+```{r,dev='png'}
 ## setting up the grid for p and phi
 grid <- expand.grid(p = seq(0, 1, by = 0.01),
     phi = seq(0, 1, by = 0.01), 
@@ -125,7 +125,7 @@ We can skip all the mathematical details in the calculation of the likelihood fu
 
 ### Bayesian model in JAGS
 
-```{r}
+```{r,dev='png'}
 library(dclone)
 library(rjags)
 library(lattice)
@@ -173,7 +173,7 @@ To make sure that both locations and clones are independent
 (i.i.d.), it is safest to include and extra dimension
 and the corresponding loop in the model.
 
-```{r}
+```{r,dev='png'}
 library(dclone)
 library(rjags)
 model <- custommodel("model {
@@ -273,7 +273,7 @@ where $w_{i \cdot} = \sum^{t=1}_{T} w_{i,t}$ and $I( w_{i \cdot} = 0 )$ is an in
 
 R code for data generation:
 
-```{r}
+```{r,dev='png'}
 set.seed(1234)
 n <- 50
 T <- 5
@@ -287,7 +287,7 @@ for (t in 1:T)
 
 Given the data, plot the likelihood contours.
 
-```{r}
+```{r,dev='png'}
 ## setting up the grid for p and phi
 grid <- expand.grid(p = seq(0, 1, by = 0.01),
     phi = seq(0, 1, by = 0.01), 
@@ -328,7 +328,7 @@ persp3d(L_mat / max(L_mat), col = Col,
 
 ### Bayesian model in JAGS
 
-```{r}
+```{r,dev='png'}
 library(dclone)
 library(rjags)
 model <- custommodel("model {
@@ -362,7 +362,7 @@ Much better right? Observe these:
 
 Effect of priors on the estimation and prediction of the occupancy proportion:
 
-```{r}
+```{r,dev='png'}
 model <- custommodel("model {
     for (i in 1:n) {
         Y[i] ~ dbern(p)
@@ -386,7 +386,7 @@ pairs(fit2)
 
 Compare posteriors based on the different priors: which one shall we prefer?
 
-```{r}
+```{r,dev='png'}
 cbind(Truth=c(p, phi), Uniform_prior=coef(fit), Normal_prior=coef(fit2))
 ```
 
@@ -394,7 +394,7 @@ cbind(Truth=c(p, phi), Uniform_prior=coef(fit), Normal_prior=coef(fit2))
 
 Frequentist inference: Identifiability check, independence from the specification of the prior check, confidence intervals and predictions for the occupancy proportion.
 
-```{r}
+```{r,dev='png'}
 library(dclone)
 library(rjags)
 model <- custommodel("model {
@@ -464,7 +464,7 @@ with values varying across the $n$ location, for example:
 
 R code for data generation:
 
-```{r}
+```{r,dev='png'}
 set.seed(1234)
 n <- 1000
 x <- rnorm(n)
@@ -480,7 +480,7 @@ w <- rbinom(n = n, size = y, prob = p)
 table(Y = y, W = w)
 ```
 
-```{r}
+```{r,dev='png'}
 naive <- glm(w ~ x, family = binomial("logit"))
 summary(naive)
 library(detect)
